--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,7 @@
 name    = IO-Storm
 author  = Cory G Watson <gphat@cpan.org>
 license = Perl_5
-copyright_holder= Infinity Interacive, Inc
+copyright_holder= Infinity Interactive, Inc
 
 [@GPHAT]
 
