--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,9 @@
 name    = IO-Storm
 author  = Cory G Watson <gphat@cpan.org>
+author  = Dan Blanchard <dblanchard@ets.org>
 license = Perl_5
 copyright_holder= Infinity Interactive, Inc
+version = 0.02
 
 [@GPHAT]
 
