--- a/dist.ini
+++ b/dist.ini
@@ -3,8 +3,28 @@ author  = Cory G Watson <gphat@cpan.org>
 author  = Dan Blanchard <dblanchard@ets.org>
 license = Perl_5
 copyright_holder= Infinity Interactive, Inc
-version = 0.02
+version = 0.03
 
-[@GPHAT]
+[@Basic]
 
-[Prereqs]
+[PkgVersion]
+
+[ChangelogFromGit]
+
+[PodWeaver]
+
+[Git::Commit]
+allow_dirty = Changes
+commit_msg  = version => %v
+
+[Git::Tag]
+tag_format  = %v
+tag_message = %v
+
+[Git::Check]
+allow_dirty =
+
+[Git::Push]
+
+[InstallRelease]
+install_command = cpanm -v .
