More tweaks to dist.ini

--- a/dist.ini
+++ b/dist.ini
@@ -28,3 +28,12 @@ allow_dirty =
 
 [InstallRelease]
 install_command = cpanm -v .
+
+[Prereqs]
+JSON::XS = 0
+Log::Log4perl = 0
+Moo = 0
+Test::MockObject = 0
+Test::More = 0
+Test::Output = 0
+Try::Tiny = 0
